#266 - Fixed popup header spacing issue.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -319,7 +319,7 @@
 	background: #fbfbfc;
 	box-shadow: 0 1px 0 0 #eef0f3;
 	border-radius: 4px 4px 0 0;
-	padding: 17px 25px 16px;
+	padding: 17px 30px 16px;
 	margin: -20px -30px 30px;
 	display: flex;
 	align-items: center;
