--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -11803,7 +11803,7 @@ body.login .login-popup .mfp-close:hover {
   background: #fbfbfc;
   box-shadow: 0 1px 0 0 #eef0f3;
   border-radius: 4px 4px 0 0;
-  padding: 17px 25px 16px;
+  padding: 17px 30px 16px;
   margin: -20px -30px 30px;
   display: flex;
   align-items: center;
